# good-bot.hs

./: .env.example  .gitignore  ChangeLog.md  FUNCTIONALITY_CHANGES.md  IMPROVEMENTS.md  README.md  cabal.project.freeze  config-template.yaml  good-bot.cabal  output.txt  package.yaml  stack.yaml
app/: Main.hs
src/: ApiClient.hs  Calculator.hs  CommandHandlers.hs  Commands.hs  Config.hs  Database.hs  DiscordHelper.hs  Lib.hs  RateLimit.hs  Types.hs
test/: CalculatorSpec.hs  Spec.hs  TypesSpec.hs
